--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
   "name": "la-ligne-noire-main",
   "version": "1.0.0",
-  "description": "",
-  "main": "discord-bot.js",
+  "description": "Un bot Discord anarchiste.",
+  "main": "discord-bot.js", // Assurez-vous que ce fichier existe à la racine
   "scripts": {
+    "start": "node discord-bot.js", // Ajoutez cette ligne pour démarrer le bot
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "discord",
+    "bot",
+    "anarchiste"
+  ],
+  "author": "Votre Nom", // Remplacez par votre nom
   "license": "ISC",
   "dependencies": {
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5"
+  },
+  "engines": {
+    "node": ">=16.x" // Assurez-vous que la version de Node.js est compatible
   }
 }
